append -2.0 to .lib files

--- a/atk/SConscript
+++ b/atk/SConscript
@@ -99,10 +99,10 @@ env.RES('atk.res', 'atk.rc')
 env.ParseConfig('pkg-config glib-2.0 --cflags --libs')
 env.ParseConfig('pkg-config gobject-2.0 --cflags --libs')
 #env.Append(LIBS = ['msimg32',  'gdi32', 'user32'])
-dll = env.SharedLibrary(['libatk' + env['LIB_SUFFIX'] + '.dll', 'atk.lib'], atk_sources + ['atk.def', 'atk.res'])
+dll = env.SharedLibrary(['libatk' + env['LIB_SUFFIX'] + '.dll', 'atk-2.0.lib'], atk_sources + ['atk.def', 'atk.res'])
 env.AddPostAction(dll, 'mt.exe -nologo -manifest ${TARGET}.manifest -outputresource:$TARGET;2')
 env.Alias('install', env.Install('$PREFIX/bin', 'libatk' + env['LIB_SUFFIX'] + '.dll'))
-env.Alias('install', env.Install('$PREFIX/lib', 'atk.lib'))
-env.Alias('install', env.InstallAs('$PREFIX/lib/libatk.lib', 'atk.lib'))
+env.Alias('install', env.Install('$PREFIX/lib', 'atk-2.0.lib'))
+env.Alias('install', env.InstallAs('$PREFIX/lib/libatk-2.0.lib', 'atk-2.0.lib'))
 if env['DEBUG'] == 1:
     env.Alias('install', env.Install('$PREFIX/pdb', 'libatk.pdb'))
