--- a/atk/SConscript
+++ b/atk/SConscript
@@ -91,6 +91,7 @@ env_mk_c = env_mk.Clone(GLIB_MKENUMS_ARGV = (('fhead', '"#include <atk.h>"'),
 env_mk_c.MkenumsGenerator('atk-enum-types.c', atk_headers)
 
 InstallDev('$PREFIX/include/atk-1.0/atk', atk_headers + ['atk-enum-types.h'], env)
+env['DOT_IN_SUBS']['@HEADERS@'] = generate_file_element(atk_headers + ['atk-enum-types.h'], r'include/atk-1.0/atk', env)
 
 env['DOT_SYMBOLS_FLAGS'] = '-DINCLUDE_VARIABLES -DG_OS_WIN32 -DALL_FILES'
 env.DotSymbols2Def('atk.def', 'atk.symbols')
@@ -100,10 +101,26 @@ env.RES('atk.res', 'atk.rc')
 env.ParseConfig('pkg-config glib-2.0 --cflags --libs')
 env.ParseConfig('pkg-config gobject-2.0 --cflags --libs')
 #env.Append(LIBS = ['msimg32',  'gdi32', 'user32'])
-dll = env.SharedLibrary(['libatk' + env['LIB_SUFFIX'] + '.dll', 'atk-1.0.lib'], atk_sources + ['atk.def', 'atk.res'])
+dllname = 'libatk' + env['LIB_SUFFIX'] + '.dll'
+dll = env.SharedLibrary([dllname, 'atk-1.0.lib'], atk_sources + ['atk.def', 'atk.res'])
 env.AddPostAction(dll, 'mt.exe -nologo -manifest ${TARGET}.manifest -outputresource:$TARGET;2')
 InstallRun('$PREFIX/bin', 'libatk' + env['LIB_SUFFIX'] + '.dll', env)
+env['DOT_IN_SUBS']['@DLLS@'] = generate_file_element(dllname, r'bin', env)
+
 InstallDev('$PREFIX/lib', 'atk-1.0.lib', env)
 InstallDevAs('$PREFIX/lib/libatk-1.0.lib', 'atk-1.0.lib', env)
+env['DOT_IN_SUBS']['@LIBS@'] = generate_file_element(['atk-1.0.lib', 'libatk-1.0.lib'], r'lib', env)
+
 if env['DEBUG'] == 1:
     InstallDev('$PREFIX/pdb', 'libatk.pdb', env)
+    env['DOT_IN_SUBS']['@PDBS@'] = '''
+		  <Directory Id='pdb' Name='pdb'>
+			  <Component Id='pdbs' Guid='dc55e9df-fcfb-4239-8d44-09ff07b00ec8'>
+				  %s 
+			  </Component>
+		  </Directory>''' % generate_file_element(env['PDB'], r'pdb', env)
+
+env.DotIn('atkrun.wxs', 'atkrun.wxs.in')
+env.DotIn('atkdev.wxs', 'atkdev.wxs.in')
+env.Depends(['atkrun.wxs', 'atkdev.wxs'], 'SConscript')
+env.Alias('install', env.Install('$PREFIX/wxs', ['atkrun.wxs', 'atkdev.wxs']))
